# isg-android-control

./: .env.example  .gitignore  =0.13.0  =0.7.0  ADB_COMMANDS.md  ADB_CONNECTION_MANAGEMENT.md  AGENTS.md  APP_SELECTOR_FIX_REPORT.md  CEC_TV_CONTROL.md  CLAUDE.md  CLI-GUIDE.md  CONTRIBUTING.md  HACS_INSTALLATION.md  HACS_PAGE.md  HACS_SETUP_GUIDE.md  HA_INTEGRATION_TROUBLESHOOTING.md  HOME_ASSISTANT_INTEGRATION_TEST_REPORT.md  ISG_APP_WATCHDOG.md  NEW_FEATURES.md  OPTIMIZATION_REPORT.md  PERFORMANCE_MONITORING.md  PROJECT_OVERVIEW.md  QUICK-INSTALL-TERMUX.md  QUICK_START.md  README-MAC.md  README-TERMUX-UBUNTU.md  README.md  RELEASE_NOTES.md  SELECT_FIX_FINAL_REPORT.md  TERMUX-UBUNTU-SUMMARY.md  TERMUX_SETUP.md  WEB_INTERFACE_GUIDE.md  cleanup_backups.sh  connect-mac.sh  connect.sh  deploy.sh  fix_select_dropdown.md  hacs.json  info.md  install-mac.sh  (+42 more)
configs/: config.yaml  device.yaml
custom_components/android_tv_box/: README.md  __init__.py  adb_service.py  binary_sensor.py  button.py  camera.py  config.py  config_flow.py  helpers.py  manifest.json  media_player.py  remote.py  select.py  sensor.py  services.py  strings.json  switch.py  web_server.py
custom_components/android_tv_box/translations/: en.json
custom_components/android_tv_box/web/: index.html  index_complete.html  index_enhanced.html  script.js  (+3 more)
scripts/: auto_configure_adb.py  check_deps.py  diagnose_adb.py  fix_adb_connection.sh  install.sh  monitor.sh  setup_adb.sh  setup_termux.sh  start.sh  stop.sh
src/: main.py
src/api/: main.py  middleware.py
src/core/: adb_controller.py  config.py  device_controller.py  logger.py
src/isg_android_control/: run.py
src/models/: requests.py  responses.py
src/mqtt/: client.py  homeassistant.py
src/services/: screenshot_service.py
tests/: test_performance_monitor.py
(+16 files in other folders)
